--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "framer-motion": "^12.4.7",
     "gsap": "^3.12.7",
     "gsap-trial": "^3.12.7",
     "react": "^19.0.0",
