--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@studio-freight/lenis": "^1.0.42",
+    "animate.css": "^4.1.1",
     "axios": "^1.7.9",
     "codelab": "file:",
     "cors": "^2.8.5",
@@ -21,7 +22,8 @@
     "gsap-trial": "^3.12.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.1.5"
+    "react-router-dom": "^7.1.5",
+    "split-type": "^0.3.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
