--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.6",
     "@studio-freight/lenis": "^1.0.42",
     "animate.css": "^4.1.1",
     "axios": "^1.7.9",
@@ -21,6 +24,7 @@
     "gsap": "^3.12.7",
     "gsap-trial": "^3.12.7",
     "lottie-react": "^2.4.1",
+    "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
