--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "notistack": "^3.0.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^7.1.5",
     "split-type": "^0.3.4"
   },
